Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48370

Genius/Waltop tablets don't work

XMLWordPrintable

    • d0ca16eae15e83a64a1e2a5b5fac53bb2bc919bb

      It's not detected as a tablet, so only works as a mouse.

      [     0.001 D] unknown - input device  WALTOP International Corp. Slim Tablet
      [     0.001 D] unknown -    has 13 buttons
      [     0.001 D] unknown -    has valuator "Abs X" recognized? true
      [     0.001 D] unknown -    has valuator "Abs Y" recognized? true
      [     0.001 D] unknown -    has valuator "Abs Pressure" recognized? true
      [     0.001 D] unknown -    has valuator "Rel Vert Wheel" recognized? true
      [     0.001 D] unknown -    it's a scrolling device
      
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            srutledg Shawn Rutledge
            srutledg Shawn Rutledge
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes